--- a/searchNgo/package.json
+++ b/searchNgo/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.7.1",
     "@types/express": "^4.17.21",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
